Fix login, JWT authentication, and role-based routing
- Implement JWT token handling and validation in Spring Security